<resources>
    <string name="app_name">Swampsploit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Swampsploit</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_exploits">Exploits</string>
    <string name="menu_slideshow">Past Reports</string>
    <string name="menu_hostscanner">Host Scanner</string>

    <string name="exploit_proftpd">ProFTPd</string>

    <string name="reports_empty">No exploit engagements have been made.</string>
    <string name="success">Success</string>
    <string name="incomplete">Incomplete</string>
    <string name="failure">Failure</string>
    <string name="exploit_engagement_history">Exploit Engagement History</string>
    <string name="touch_pocfile">`touch PoCFile`</string>
    <string name="netatalk_description">The Apple Filing Protocol (AFP) server running on the remote host is affected by a remote code execution vulnerability due to a buffer overflow condition when handling an OpenSession request. \n\nAn unauthenticated, remote attacker can exploit this issue, via a specially crafted message, to execute arbitrary code.</string>
    <string name="list_volumes">List volumes</string>
    <string name="list_all_vol_content">List all volume content</string>
    <string name="parameters">Parameters</string>
    <string name="ip_address">IP Address (Eg: 8.8.8.8) </string>
    <string name="exploit">Exploit</string>
</resources>