<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_exploit_gallery"
            android:icon="@drawable/baseline_bug_report_24"
            android:title="@string/menu_exploits" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/baseline_library_books_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_hostscanner"
            android:icon="@drawable/baseline_perm_scan_wifi_24"
            android:title="@string/menu_hostscanner" />
    </group>
</menu>